[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mc-endstone-doc-scraper"
version = "0.1.0"
description = "Web scraper for Endstone.dev Minecraft Python server documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.11.6",
    "rich>=13.0.0",
]

[project.scripts]
endstone-scrape = "endstone_scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_scraper"]
